# wasm-pore-detection

./: Cargo.toml  README.md  index.html  sw.js  wasm_pore_detection.js  wasm_pore_detection_bg.wasm
src/: app.rs  lib.rs  main.rs
src/model/: detection_app.rs  image_data.rs  images.rs  mod.rs
src/view/: debug_window.rs  export_window.rs  load_project_modal.rs  mod.rs  new_project_modal.rs  plot.rs  shortcut_window.rs  sidepanel.rs  top_panel.rs
